fix: alignment issue on low-rez displays

--- a/src/sections/PastSponsors/PastSponsors.module.scss
+++ b/src/sections/PastSponsors/PastSponsors.module.scss
@@ -8,6 +8,7 @@
   flex-wrap: wrap;
   justify-content: space-evenly;
   align-items: center;
+  padding: 0;
 }
 
 .logoContainer {
